--- a/index.html
+++ b/index.html
@@ -5,560 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plaqueify - Custom Spotify Plaques v2.0</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --primary-blue: #2563eb;
-            --light-blue: #3b82f6;
-            --pale-blue: #dbeafe;
-            --accent-blue: #1d4ed8;
-            --dark-blue: #1e40af;
-            --spotify-green: #1db954;
-            --white: #ffffff;
-            --light-gray: #f8fafc;
-            --gray: #64748b;
-            --dark-gray: #334155;
-            --border-gray: #e2e8f0;
-            --text-primary: #1e293b;
-            --text-secondary: #64748b;
-            --gradient: linear-gradient(135deg, #2563eb 0%, #3b82f6 100%);
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-                background: var(--light-gray);
-        }
-
-                border: 2px solid var(--border-gray);
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-            background: linear-gradient(135deg, #f8fafc 0%, #ffffff 100%);
-            color: var(--text-primary);
-            min-height: 100vh;
-            line-height: 1.5;
-        }
-                background: var(--border-gray);
-        /* Header */
-        .header {
-            text-align: center;
-            padding: 4rem 2rem;
-            background: linear-gradient(135deg, rgba(37, 99, 235, 0.1) 0%, rgba(248, 250, 252, 0.9) 100%);
-        }
-                color: var(--text-primary);
-        .header h1 {
-            font-size: 4rem;
-            font-weight: 800;
-            background: var(--gradient);
-            -webkit-background-clip: text;
-                color: var(--text-secondary);
-            background-clip: text;
-            margin-bottom: 1rem;
-            letter-spacing: -0.02em;
-        }
-
-                color: var(--primary-blue);
-            font-size: 1.25rem;
-            color: var(--text-secondary);
-            max-width: 600px;
-            margin: 0 auto;
-        }
-
-        /* Main Container */
-        .container {
-            max-width: 1400px;
-            margin: 0 auto;
-            padding: 0 2rem 4rem;
-        }
-
-        .main-grid {
-            display: grid;
-            grid-template-columns: 1fr 400px;
-            gap: 3rem;
-            margin-top: 3rem;
-        }
-
-        /* Left Panel */
-        .creator-panel {
-            background: var(--white);
-            border: 2px solid var(--border-gray);
-            border-radius: 24px;
-            padding: 2.5rem;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
-        }
-
-        .section-title {
-            font-size: 1.75rem;
-            font-weight: 700;
-            margin-bottom: 2rem;
-            color: var(--text-primary);
-        }
-
-        /* Search Section */
-        .search-container {
-            margin-bottom: 1.5rem;
-        }
-
-        .search-input, .artist-input {
-            width: 100%;
-            background: var(--white);
-            border: 2px solid var(--border-gray);
-            border-radius: 12px;
-            padding: 1.25rem 1.75rem;
-            color: var(--text-primary);
-            font-size: 1.1rem;
-            font-weight: 500;
-            transition: all 0.3s ease;
-            margin-bottom: 1rem;
-        }
-
-        .search-input:focus, .artist-input:focus {
-            outline: none;
-            border-color: var(--primary-blue);
-            box-shadow: 0 0 0 4px rgba(37, 99, 235, 0.1);
-        }
-
-        .search-input::placeholder, .artist-input::placeholder {
-            color: var(--gray);
-        }
-
-        .input-label {
-            display: block;
-            font-size: 0.9rem;
-            font-weight: 600;
-            color: var(--text-secondary);
-            margin-bottom: 0.5rem;
-        }
-
-        /* Album Preview */
-        .preview-container {
-            text-align: center;
-            margin-bottom: 3rem;
-        }
-
-        .album-showcase {
-            background: var(--light-gray);
-            border-radius: 20px;
-            padding: 2.5rem;
-            margin-bottom: 2rem;
-            border: 2px solid var(--border-gray);
-        }
-
-        .album-cover-container {
-            margin-bottom: 2rem;
-        }
-
-        .album-cover {
-            width: 240px;
-            height: 240px;
-            margin: 0 auto;
-            border-radius: 16px;
-            background: linear-gradient(135deg, var(--pale-blue), var(--border-gray));
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            overflow: hidden;
-            box-shadow: 0 15px 35px rgba(37, 99, 235, 0.15);
-            transition: transform 0.4s ease;
-            position: relative;
-            border: 2px solid var(--border-gray);
-        }
-
-        .album-cover:hover {
-            transform: scale(1.05);
-        }
-
-        .album-cover img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .album-placeholder {
-            font-size: 3rem;
-            color: var(--gray);
-            opacity: 0.5;
-        }
-
-        .song-details {
-            text-align: center;
-            margin-bottom: 2rem;
-        }
-
-        .song-title {
-            font-size: 1.75rem;
-            font-weight: 700;
-            color: var(--text-primary);
-            margin-bottom: 0.75rem;
-        }
-
-        .artist-name {
-            font-size: 1.25rem;
-            color: var(--text-secondary);
-            margin-bottom: 0.5rem;
-        }
-
-        .album-name {
-            font-size: 1rem;
-            color: var(--gray);
-            font-style: italic;
-        }
-
-        /* Progress Controls */
-        .progress-section {
-            background: var(--white);
-            border-radius: 16px;
-            padding: 2rem;
-            border: 2px solid var(--border-gray);
-        }
-
-        .progress-title {
-            font-size: 1.1rem;
-            font-weight: 600;
-            margin-bottom: 1.5rem;
-            color: var(--text-primary);
-        }
-
-        .progress-bar-wrapper {
-            position: relative;
-            margin: 1.5rem 0;
-        }
-
-        .progress-track {
-            width: 100%;
-            height: 8px;
-            background: var(--border-gray);
-            border-radius: 4px;
-            cursor: pointer;
-            position: relative;
-        }
-
-        .progress-fill {
-            height: 100%;
-            background: var(--gradient);
-            border-radius: 4px;
-            width: 30%;
-            transition: width 0.3s ease;
-        }
-
-        .progress-handle {
-            position: absolute;
-            top: 50%;
-            right: 0;
-            transform: translateY(-50%);
-            width: 16px;
-            height: 16px;
-            background: var(--white);
-            border: 3px solid var(--primary-blue);
-            border-radius: 50%;
-            box-shadow: 0 2px 8px rgba(37, 99, 235, 0.3);
-            cursor: pointer;
-        }
-
-        .time-labels {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 0.75rem;
-            font-size: 0.9rem;
-            color: var(--text-secondary);
-        }
-
-        /* Action Buttons */
-        .action-row {
-            display: flex;
-            gap: 1rem;
-            margin-top: 2rem;
-        }
-
-        .btn {
-            flex: 1;
-            padding: 1.25rem;
-            border: none;
-            border-radius: 50px;
-            font-weight: 600;
-            font-size: 1rem;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            text-decoration: none;
-            text-align: center;
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            gap: 0.5rem;
-        }
-
-        .btn-primary {
-            background: var(--gradient);
-            color: white;
-            box-shadow: 0 6px 20px rgba(37, 99, 235, 0.3);
-        }
-
-        .btn-primary:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 8px 25px rgba(37, 99, 235, 0.4);
-        }
-
-        .btn-secondary {
-            background: var(--white);
-            color: var(--primary-blue);
-            border: 2px solid var(--primary-blue);
-        }
-
-        .btn-secondary:hover {
-            background: var(--pale-blue);
-            border-color: var(--accent-blue);
-        }
-
-        /* Right Panel - Cart */
-        .cart-panel {
-            background: var(--white);
-            border: 2px solid var(--border-gray);
-            border-radius: 24px;
-            padding: 2.5rem;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.08);
-            position: sticky;
-            top: 2rem;
-            height: fit-content;
-        }
-
-        .cart-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 2rem;
-        }
-
-        .cart-title {
-            font-size: 1.75rem;
-            font-weight: 700;
-            color: var(--text-primary);
-        }
-
-        .cart-badge {
-            background: var(--primary-blue);
-            color: white;
-            border-radius: 50%;
-            width: 32px;
-            height: 32px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-weight: 600;
-            font-size: 0.9rem;
-        }
-
-        .cart-items {
-            margin-bottom: 2rem;
-            max-height: 300px;
-            overflow-y: auto;
-        }
-
-        .cart-item {
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-            padding: 1.25rem;
-            background: var(--spotify-black);
-            border-radius: 16px;
-            margin-bottom: 1rem;
-            border: 1px solid rgba(255, 255, 255, 0.05);
-        }
-
-        .cart-item-image {
-            width: 60px;
-            height: 60px;
-            border-radius: 8px;
-            background: var(--spotify-grey);
-            overflow: hidden;
-            flex-shrink: 0;
-        }
-
-        .cart-item-image img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .cart-item-info {
-            flex: 1;
-        }
-
-        .cart-item-title {
-            font-weight: 600;
-            color: var(--spotify-white);
-            margin-bottom: 0.25rem;
-            font-size: 0.95rem;
-        }
-
-        .cart-item-artist {
-            color: var(--spotify-light-grey);
-            font-size: 0.85rem;
-        }
-
-        .cart-item-price {
-            font-weight: 700;
-            color: var(--spotify-green);
-            font-size: 1rem;
-        }
-
-        .remove-item {
-            background: transparent;
-            border: none;
-            color: var(--spotify-grey);
-            cursor: pointer;
-            padding: 0.5rem;
-            border-radius: 50%;
-            transition: all 0.3s ease;
-            font-size: 1.25rem;
-        }
-
-        .remove-item:hover {
-            background: rgba(255, 255, 255, 0.1);
-            color: #ff4757;
-        }
-
-        /* Cart Summary */
-        .cart-summary {
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
-            padding-top: 2rem;
-        }
-
-        .summary-line {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 0.75rem;
-            color: var(--spotify-light-grey);
-        }
-
-        .summary-total {
-            display: flex;
-            justify-content: space-between;
-            font-size: 1.25rem;
-            font-weight: 700;
-            color: var(--spotify-white);
-            margin-top: 1rem;
-            padding-top: 1rem;
-            border-top: 1px solid rgba(255, 255, 255, 0.1);
-        }
-
-        .checkout-btn {
-            width: 100%;
-            margin-top: 2rem;
-            background: var(--gradient);
-            color: white;
-            border: none;
-            padding: 1.5rem;
-            border-radius: 50px;
-            font-weight: 700;
-            font-size: 1.1rem;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            box-shadow: 0 6px 20px rgba(29, 185, 84, 0.3);
-        }
-
-        .checkout-btn:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 8px 25px rgba(29, 185, 84, 0.4);
-        }
-
-        /* Empty States */
-        .empty-preview {
-            text-align: center;
-            padding: 4rem 2rem;
-            color: var(--spotify-grey);
-        }
-
-        .empty-preview .icon {
-            font-size: 4rem;
-            margin-bottom: 1rem;
-            opacity: 0.3;
-        }
-
-        .empty-cart {
-            text-align: center;
-            padding: 3rem 1rem;
-            color: var(--spotify-grey);
-        }
-
-        .empty-cart .icon {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-            opacity: 0.3;
-        }
-
-        /* SVG Preview */
-        .svg-preview {
-            background: white;
-            border-radius: 16px;
-            padding: 2rem;
-            margin-top: 2rem;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-        }
-
-        .svg-preview svg {
-            width: 100%;
-            height: auto;
-        }
-
-        /* Loading Animation */
-        .loading {
-            display: inline-block;
-            width: 20px;
-            height: 20px;
-            border: 2px solid rgba(255, 255, 255, 0.3);
-            border-radius: 50%;
-            border-top-color: var(--spotify-green);
-            animation: spin 1s linear infinite;
-        }
-
-        @keyframes spin {
-            to { transform: rotate(360deg); }
-        }
-
-        /* Responsive Design */
-        @media (max-width: 1024px) {
-            .main-grid {
-                grid-template-columns: 1fr;
-                gap: 2rem;
-            }
-
-            .cart-panel {
-                position: static;
-            }
-        }
-
-        @media (max-width: 768px) {
-            .header {
-                padding: 2rem 1rem;
-            }
-
-            .header h1 {
-                font-size: 2.5rem;
-            }
-
-            .container {
-                padding: 0 1rem 2rem;
-            }
-
-            .creator-panel,
-            .cart-panel {
-                padding: 1.5rem;
-            }
-
-            .album-cover {
-                width: 180px;
-                height: 180px;
-            }
-
-            .action-row {
-                flex-direction: column;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header -->
     <div class="header">
         <h1>Plaqueify</h1>
-        <p>Create beautiful custom Spotify plaques of your favorite songs</p>
+        <div class="slogan">Create beautiful custom Spotify plaques of your favorite songs</div>
+        <div class="sub-slogan">The original Spotify plaque creator – trusted by music lovers since 2020</div>
     </div>
 
     <!-- Main Container -->
