--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
                     </div>
                     <!-- Album Preview -->
                     <div class="preview-container">
-                        <div class="album-showcase">
-                            <div class="album-cover-container">
-                                <div class="album-cover" id="albumCover">
+                        <div class="album-showcase prominent-preview">
+                            <div class="album-flex-row">
+                                <div class="album-cover-large" id="albumCover">
                                     <div class="album-placeholder">🎵</div>
                                 </div>
-                            </div>
-                            <div class="song-details">
-                                <div class="song-title" id="songTitle">Select a song to get started</div>
-                                <div class="artist-name" id="artistName">Search above to find your favorite tracks</div>
-                                <div class="album-name" id="albumName"></div>
+                                <div class="song-details side-details">
+                                    <div class="song-title" id="songTitle">Select a song to get started</div>
+                                    <div class="artist-name" id="artistName">Search above to find your favorite tracks</div>
+                                    <div class="album-name" id="albumName"></div>
+                                </div>
                             </div>
                         </div>
                         <!-- Progress Controls -->
