--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
                     <h2 class="section-title">🎵 Create Your Plaque</h2>
                     <!-- Search Section -->
                     <div class="search-container">
-                        <label class="input-label">Search for a song</label>
-                        <input type="text" class="search-input" id="songSearch" placeholder="Enter song name..." autocomplete="off">
-                        <label class="input-label">Override Artist (Optional)</label>
-                        <input type="text" class="artist-input" id="artistOverride" placeholder="Leave blank to use original..." autocomplete="off">
+                        <label class="input-label">Search for a song or artist</label>
+                        <input type="text" class="search-input" id="songSearch" placeholder="Enter song name or artist..." autocomplete="off">
                     </div>
                     <!-- Album Preview -->
                     <div class="preview-container">
@@ -59,7 +57,6 @@
                     </div>
                     <!-- Action Buttons -->
                     <div class="action-row">
-                        <button class="btn btn-secondary" id="previewBtn">👁️ Preview</button>
                         <button class="btn btn-primary" id="addToCartBtn">🛒 Add to Cart - $24.99</button>
                     </div>
                     <!-- SVG Preview -->
