--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 <body>
         <!-- Header -->
         <div class="header">
-                <h1>Plaqueify</h1>
-                <div class="slogan">Create beautiful custom Spotify plaques of your favorite songs</div>
-                <div class="sub-slogan">The original Spotify plaque creator – trusted by music lovers since 2020</div>
+            <h1>Plaqueify</h1>
+            <div class="slogan">Where Songs Become Art.</div>
         </div>
 
         <!-- Main Container -->
